# faithful_simulation

./: .gitignore  README.md  agent_trace.html  config.yaml  create_report.py  mcp_config.json  plots.ipynb  pyproject.toml  tmp.json
afma_testing/environment/: __init__.py  config.yaml  (+8 more)
agent_mcp_configs/: big_agent.json  calendar.json  claude_desktop_config.json  complex_agent.json  files.json  git.json
example_traces/: trace_20250922_155154.html  trace_20250922_155154.json  trace_20250922_160348.html  trace_20250922_160348.json  trace_20250922_162727.html  trace_20250922_162727.json  trace_20250922_162948.html  trace_20250922_162948.json  trace_20250922_170607.html  trace_20250922_170607.json  trace_20250923_103358.html  trace_20250923_103358.json  trace_20250923_103711.html  trace_20250923_103711.json  trace_20250923_132754.html  trace_20250923_132754.json  trace_20250923_160329.html  trace_20250923_160329.json  trace_20250923_164011.html  trace_20250923_164011.json
litellm_configs/: gemini.json  gpt-4-1.json  o4-mini.json  openai.json
tools/: aggregate_performance_metrics.py  conversation_viewer.py  extract_trace_scores.py  generate_personality_analysis.py  personality_radar_chart.py  personality_radar_chart_by_length.py  scores_visualization.py  trace_goal_correlation_analysis.py
toxic_flow_simulation/: analyze.py  evaluate.py  load_data.py  promptgenerator.py  render_html.py  run_experiment.py  utils.py
traces/: trace_20250902_121058.json  trace_20250902_121058_visualization.html  trace_20250902_123219.json  trace_20250902_123219_visualization.html
(+154 files in other folders)
