[project]
name = "afma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark-parser[regex]>=0.12.0",
    "litellm>=1.67.4.post1",
    "loguru>=0.7.3",
    "mcp[cli]>=1.6.0",
    "pyjson5>=1.6.8",
    "rich>=13.7.0",
    "click>=8.1.7",
]

[project.scripts]
afma = "afma.cli:main"
