[project]
name = "afma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark-parser[regex]>=0.12.0",
    "litellm>=1.67.4.post1",
    "loguru>=0.7.3",
    "mcp[cli]>=1.6.0",
    "pyjson5>=1.6.8",
    "rich>=13.7.0",
    "click>=8.1.7",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=6.1.2",
    "networkx>=3.5",
    "matplotlib>=3.10.3",
    "scipy>=1.15.3",
    "watchdog>=6.0.0",
    "diskcache>=5.6.3",
    "seaborn>=0.13.2",
    "mcp-scan>=0.3.13", ]

[project.scripts]
afma = "afma.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
